# CRDR

./: .gitignore  README.md  pyproject.toml
config/: crdr.yaml  crdr_stage_1.yaml  crdr_stage_2.yaml  crdr_stage_3.yaml
config/_base_/: default.yaml
config/_base_/dataset/: openimage_kodak.yaml
config/_base_/model/: beta_cond_interp_ca_elic_charm.yaml  beta_cond_interp_ca_elic_hyperprior.yaml  elic_charm.yaml  elic_hyperprior.yaml  interp_ca_elic_charm.yaml  interp_ca_elic_hyperprior.yaml
config/_base_/training/: default.yaml
config/examples/: example_1.yaml  example_2.yaml
docs/: training.md
rd_results/: CLIC.csv  CLIC_reproduce.csv  DIV2K.csv  README.md  kodak.csv
scripts/: calc_metrics.py  compress.py  train.py
src/dataset/: __init__.py  base_dataset.py  data_transform.py  kodak_dataset.py  openimage_dataset.py
src/losses/: __init__.py  distortion_loss.py  gan_loss.py  perceptual_loss.py  rate_loss.py
src/models/: __init__.py
src/models/comp_model/: __init__.py  base_model.py  beta_cond_interpca_hyperprior_charm_model.py  beta_cond_interpca_hyperprior_model.py  hyperprior_charm_model.py  (+3 more)
src/trainer/: __init__.py  base_trainer.py  beta_cond_rgan_rate_distortion_trainer.py  gan_rate_distortion_trainer.py  multirate_hr_rgan_beta_cond_rate_distortion_trainer.py  multirate_hr_rgan_rate_distortion_trainer.py  ragan_rate_distortion_trainer.py  rate_distortion_trainer.py  rgan_rate_distortion_trainer.py
src/utils/: __init__.py  codec_utils.py  img_utils.py  logger.py  misc.py  model_saver.py  options.py  path.py  registry.py  timer.py
(+37 files in other folders)
